--- a/jmeter/Jmeter-Test/tasks/main.yml
+++ b/jmeter/Jmeter-Test/tasks/main.yml
@@ -1,11 +1,7 @@
 ---
 # tasks file for Jmeter-Test
-# Setup jmeter docker container
+# Run test on jmeter container
 
-- name: Setup jmeter container
-  import_tasks: setup_jmeter.yml
-  tags: docker-jmeter
-
-- name: Run jmeter test on container
+- name: Run jmeter test on {{conatainer_name}} container 
   import_tasks: jmeter_exec.yml
   tags: jmeter-test
